update gio hang

--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
         <div class="menu-pc" data-aos="fade-right">
             <nav>
                 <ul>
-                    <li>Sản phẩm</li>
+                    <li><a href="product.html">Sản phẩm</a></li>
                     <li><a href="cart.html">Giỏ hàng</a></li>
                     <li class="logo"><a href="home.html"><img src="img/LOGO/bk.jpg" alt=""></a></li>
                     <li><a href="about.html">Về chúng tôi</a></li>
