--- a/product.html
+++ b/product.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul>
                   <li><a href="product.html">Sản phẩm</a></li>
-                  <li><a href="cart.html">Giỏ hàng</a></li>
+                  <li><a href="cart.html">Bill</a></li>
                   <li class="logo"><a href="home.html"><img src="img/LOGO/bk.jpg" alt=""></a></li>
                   <li><a href="about.html">Về chúng tôi</a></li>
                     <li><a href="login.html">Login</a></li>
@@ -91,7 +91,7 @@
                                     <td>Name</td>
                                     <td>Price</td>
                                     <td>Quantity</td>
-                                    <td>Total</td>
+                                    <td>Total Price</td>
                                 </tr>
                                 <tr ng-repeat="(key,value) in giohang"> 
                                     <!-- repeat to display cart -->
